--- a/views/layouts/dashboard.html
+++ b/views/layouts/dashboard.html
@@ -12,7 +12,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Madimi+One&family=Meera+Inimai&family=Ysabeau:ital,wght@0,1..1000;1,1..1000&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="../../assets/css/style.css">
 
 </head>
 
@@ -44,13 +44,14 @@
           </div>
         </div>
       </nav>
-      <p class="techblog-title">The Tech Blog</p>
+      <p class="techblog-title">Your Dashboard</p>
     </div>
   </header>
 
   <main>
     <div class="container">
       <div class="row">
+        <!-- this is where you enter your existing blog posts -->
         <div class="col-6" id="blog-post-card">
           <p>Why MVC is so important</p>
         </div>
@@ -61,27 +62,26 @@
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab maxime excepturi molestias itaque saepe expedita
           libero. Libero illo est eveniet doloremque obcaecati? Culpa corrupti vel, earum rerum autem cupiditate minima?
         </div>
-        <!-- -------------------------------------------------------------------------------------- -->
-        <div class="col-6" id="blog-post-card">
-          <p>Why MVC is so important</p>
+        <div class="col-12" id="blog-post-content-comment-header">
+          Comments
         </div>
-        <div class="col-6" id="blog-post-card-post">
-          <p>posted by Eric Lee on 3/30/2024</p>
+        <div class="col-12" id="blog-post-content-comment">
+          this is a very cool post!
+          by: Daniel Lee - 3/30/2024
         </div>
-        <div class="col-12" id="blog-post-content">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab maxime excepturi molestias itaque saepe expedita
-          libero. Libero illo est eveniet doloremque obcaecati? Culpa corrupti vel, earum rerum autem cupiditate minima?
+        <div class="col-12" id="blog-post-content-comment">
+          this is a very cool post!
+          by: Daniel Lee - 3/30/2024
         </div>
-        <div class="col-6" id="blog-post-card">
-          <p>Why MVC is so important</p>
+
+        <!-- button area -->
+        <div class="d-grid col-2 mx-auto">
+          <button class="btn" id="new-post-btn" type="button">+ New Post</button>
         </div>
-        <div class="col-6" id="blog-post-card-post">
-          <p>posted by Eric Lee on 3/30/2024</p>
-        </div>
-        <div class="col-12" id="blog-post-content">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab maxime excepturi molestias itaque saepe expedita
-          libero. Libero illo est eveniet doloremque obcaecati? Culpa corrupti vel, earum rerum autem cupiditate minima?
-        </div>
+        
+
+
+
       </div>
 
     </div>
