--- a/views/login.html
+++ b/views/login.html
@@ -12,7 +12,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Madimi+One&family=Meera+Inimai&family=Ysabeau:ital,wght@0,1..1000;1,1..1000&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="../../assets/css/style.css">
 
 </head>
 
@@ -22,8 +22,9 @@
     <div class="container">
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <button class="navbar-toggler m-1 border border-light-subtle lh-base" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" id="hamburger-menu">
+          <button class="navbar-toggler m-1 border border-light-subtle lh-base" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"
+            id="hamburger-menu">
             <span class="text-light">Menu</span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
@@ -52,36 +53,34 @@
     <div class="container">
       <div class="row">
         <div class="col-6" id="blog-post-card">
-          <p>Why MVC is so important</p>
+          <p>Login</p>
         </div>
         <div class="col-6" id="blog-post-card-post">
-          <p>posted by Eric Lee on 3/30/2024</p>
+          <p></p>
         </div>
-        <div class="col-12" id="blog-post-content">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab maxime excepturi molestias itaque saepe expedita
-          libero. Libero illo est eveniet doloremque obcaecati? Culpa corrupti vel, earum rerum autem cupiditate minima?
-        </div>
+        <form class="col-12" id="sign-up-card">
+          <div class="pb-3" style="padding-left: 0; padding-right: 0">
+            <label for="exampleFormControlInput1" class="form-label text-white mt-3 mx-3">Email address</label>
+            <input type="email" class="form-control mx-3" style="width:20rem" id="exampleFormControlInput1"
+              placeholder="name@example.com">
+          </div>
+          <label for="inputPassword5" class="form-label text-white mx-3">Password</label>
+          <input type="password" id="inputPassword5" class="form-control mx-3" style="width:20rem"
+            aria-describedby="passwordHelpBlock">
+          <div id="passwordHelpBlock" class="form-text text-white mx-3 mb-4">
+           
+          </div>
+          <div class="d-flex justify-content-center">
+            <button class="btn" id="create-acct-btn" type="button">Login</button>
+          </div>
+          <div class="col-12 mx-3 mb-3">
+            <a href="" id="sign-up-instead">Sign Up Instead</a>
+
+          </div>
+        </form>
+        
         <!-- -------------------------------------------------------------------------------------- -->
-        <div class="col-6" id="blog-post-card">
-          <p>Why MVC is so important</p>
-        </div>
-        <div class="col-6" id="blog-post-card-post">
-          <p>posted by Eric Lee on 3/30/2024</p>
-        </div>
-        <div class="col-12" id="blog-post-content">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab maxime excepturi molestias itaque saepe expedita
-          libero. Libero illo est eveniet doloremque obcaecati? Culpa corrupti vel, earum rerum autem cupiditate minima?
-        </div>
-        <div class="col-6" id="blog-post-card">
-          <p>Why MVC is so important</p>
-        </div>
-        <div class="col-6" id="blog-post-card-post">
-          <p>posted by Eric Lee on 3/30/2024</p>
-        </div>
-        <div class="col-12" id="blog-post-content">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab maxime excepturi molestias itaque saepe expedita
-          libero. Libero illo est eveniet doloremque obcaecati? Culpa corrupti vel, earum rerum autem cupiditate minima?
-        </div>
+
       </div>
 
     </div>
