Added handlebars to render seed blogpost data. Created session data for tracking whether user is logged in. Some parts of the links are functional now

--- a/views/layouts/dashboard.html
+++ b/views/layouts/dashboard.html
@@ -12,7 +12,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Madimi+One&family=Meera+Inimai&family=Ysabeau:ital,wght@0,1..1000;1,1..1000&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="../../assets/css/style.css">
+  <link rel="stylesheet" href="../../public/css/style.css">
 
 </head>
 
@@ -49,6 +49,7 @@
   </header>
 
   <main>
+    {{{body}}}
     <div class="container">
       <div class="row">
         <!-- this is where you enter your existing blog posts -->
