--- a/views/partials/blogpostsrender.handlebars
+++ b/views/partials/blogpostsrender.handlebars
@@ -1,9 +1,6 @@
-{{#each blogPosts as |blogpost|}}
-{{> blogpostsrender}}
-{{/each}}
 
 
-{{!-- <div class="container">
+<div class="container">
     <div class="row">
         <div class="col-6" id="blog-post-card">
             <p>{{title}}</p>
@@ -15,4 +12,4 @@
             {{content}}
         </div>
     </div>
-</div> --}}
+</div>
