--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,17 +29,20 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="#" id="nav-btns">Home</a>
+                <a class="nav-link" href="/" id="nav-btns">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#" id="nav-btns">Dashboard</a>
+                <a class="nav-link" href="/dashboard" id="nav-btns">Dashboard</a>
               </li>
+              {{#if loggedIn}}
               <li class="nav-item">
-                <a class="nav-link" href="#" id="nav-btns">Login</a>
+                <a class="nav-link" href="/logout" id="logout-btn">Logout</a>
               </li>
+              {{else}}
               <li class="nav-item">
-                <a class="nav-link" href="#" id="logout-btn">Logout</a>
+                <a class="nav-link" href="/login" id="nav-btns">Login</a>
               </li>
+              {{/if}}
             </ul>
           </div>
         </div>
