--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -36,7 +36,7 @@
               </li>
               {{#if loggedIn}}
               <li class="nav-item">
-                <a class="nav-link" href="/logout" id="logout-btn">Logout</a>
+                <button class="nav-link" href="/logout" id="logout-btn">Logout</button>
               </li>
               {{else}}
               <li class="nav-item">
@@ -60,6 +60,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
+    {{#if loggedIn}}
+    <script src="/js/logout.js"></script>
+    {{/if}}
 </body>
 
 </html>
