--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,15 +1,18 @@
+{{#each myBlogPosts as |myblogpost|}}
+{{> dashboardRender}}
+{{/each}}
 
 
-<div class="container">
+{{!-- <div class="container">
     <div class="row">
         <div class="col-6" id="blog-post-card">
             <p>{{title}}</p>
         </div>
         <div class="col-6" id="blog-post-card-post">
-            <p>posted by {{user}} on {{date}}</p>
+            <p>posted by {{User.username}} on {{date}}</p>
         </div>
         <div class="col-12" id="blog-post-content">
             {{content}}
         </div>
     </div>
-</div>
+</div> --}}
