--- a/views/layouts/dashboardnewpost.html
+++ b/views/layouts/dashboardnewpost.html
@@ -12,7 +12,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Madimi+One&family=Meera+Inimai&family=Ysabeau:ital,wght@0,1..1000;1,1..1000&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="../public/css/style.css">
+  <link rel="stylesheet" href="../../public/css/style.css">
 
 </head>
 
@@ -22,9 +22,8 @@
     <div class="container">
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <button class="navbar-toggler m-1 border border-light-subtle lh-base" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"
-            id="hamburger-menu">
+          <button class="navbar-toggler m-1 border border-light-subtle lh-base" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" id="hamburger-menu">
             <span class="text-light">Menu</span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
@@ -45,52 +44,43 @@
           </div>
         </div>
       </nav>
-      <p class="techblog-title">The Tech Blog</p>
+      <p class="techblog-title">Your Dashboard</p>
     </div>
   </header>
 
   <main>
+    {{{body}}}
     <div class="container">
       <div class="row">
         <div class="col-6" id="blog-post-card">
-          <p>Sign Up</p>
+          <p>New Blog Post!</p>
         </div>
         <div class="col-6" id="blog-post-card-post">
           <p></p>
         </div>
-        <form class="col-12 signup-form" id="sign-up-card">
-          <div class="pb-1" style="padding-left: 0; padding-right: 0">
-            <label for="usernameInput" class="form-label text-white mt-3 mx-3">Username</label>
-            <input type="text" class="form-control mx-3" style="width:20rem" id="usernameInput"
-              placeholder="mynameiseric">
-          </div>
+        <form class="col-12 login-form" id="sign-up-card">
           <div class="pb-3" style="padding-left: 0; padding-right: 0">
-            <label for="emailInput" class="form-label text-white mt-3 mx-3">Email address</label>
-            <input type="email" class="form-control mx-3" style="width:20rem" id="emailInput"
-              placeholder="name@example.com">
+            <label for="titleInput" class="form-label text-white mt-3 mx-3">Title</label>
+            <input type="text" class="form-control mx-3" style="width:97%" id="titleInput"
+              placeholder="Tech blog is cool!">
           </div>
-          <label for="inputPassword5" class="form-label text-white mx-3">Password</label>
-          <input type="password" id="inputPassword5" class="form-control mx-3" style="width:20rem"
-            aria-describedby="passwordHelpBlock">
+          <label for="blogcontent" class="form-label text-white mx-3">Content</label>
+          <textarea id="blogcontent" class="form-control mx-3 mb-3" style="width:97%"
+            aria-describedby="passwordHelpBlock"></textarea>
           <div id="passwordHelpBlock" class="form-text text-white mx-3 mb-4">
-            Your password must be 8-20 characters long, contain letters and numbers, and MUST NOT contain spaces,
-            special
-            characters, or emoji.
+    
           </div>
           <div class="d-flex justify-content-center">
-            <input type="submit" value="Create Account!" class="btn" id="create-acct-btn" type="button"></input>
+            <input type="submit" value="Create New Post!" class="btn" id="login-btn" type="button"></input>
           </div>
-          <div class="col-12 mx-3 mb-3">
-            <a href="/login" id="login-instead">Login instead</a>
-
-          </div>
+          <!-- <div class="col-12 mx-3 mb-3">
+            <a href="/createacct" id="sign-up-instead">Sign Up Instead</a>
+    
+          </div> -->
         </form>
-
-        <!-- -------------------------------------------------------------------------------------- -->
-
       </div>
-
     </div>
+    
   </main>
 
 
@@ -98,6 +88,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
+  <script src="/js/createacct.js"></script>
 </body>
 
 </html>
