Creating new blogpost is now functional.

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,7 +1,16 @@
+<div class="container">
+    <div class="row">
+
 {{#each myBlogPosts as |myblogpost|}}
 {{> dashboardRender}}
 {{/each}}
+<div class="d-grid col-2 mx-auto">
+            <button class="btn" id="new-post-btn" type="button">+ New Post</button>
+        </div>
+    </div>
+</div>
 
+<script src="/js/newpostlink.js"></script>
 
 {{!-- <div class="container">
     <div class="row">
