--- a/views/layouts/dashboardnewpost.html
+++ b/views/layouts/dashboardnewpost.html
@@ -58,7 +58,7 @@
         <div class="col-6" id="blog-post-card-post">
           <p></p>
         </div>
-        <form class="col-12 login-form" id="sign-up-card">
+        <form class="col-12 blog-post-form" id="sign-up-card">
           <div class="pb-3" style="padding-left: 0; padding-right: 0">
             <label for="titleInput" class="form-label text-white mt-3 mx-3">Title</label>
             <input type="text" class="form-control mx-3" style="width:97%" id="titleInput"
