--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -1,33 +1,32 @@
 <div class="container">
-  <div class="row">
-    <div class="col-6" id="blog-post-card">
-      <p>New Blog Post!</p>
+      <div class="row">
+        <div class="col-6" id="blog-post-card">
+          <p>New Blog Post!</p>
+        </div>
+        <div class="col-6" id="blog-post-card-post">
+          <p></p>
+        </div>
+        <form class="col-12 blog-post-form" id="sign-up-card">
+          <div class="pb-3" style="padding-left: 0; padding-right: 0">
+            <label for="titleInput" class="form-label text-white mt-3 mx-3">Title</label>
+            <input type="text" class="form-control mx-3" style="width:97%" id="titleInput"
+              placeholder="Tech blog is cool!">
+          </div>
+          <label for="blogcontent" class="form-label text-white mx-3">Content</label>
+          <textarea id="blogcontent" class="form-control mx-3 mb-3" style="width:97%"
+            aria-describedby="passwordHelpBlock"></textarea>
+          <div id="passwordHelpBlock" class="form-text text-white mx-3 mb-4">
+    
+          </div>
+          <div class="d-flex justify-content-center">
+            <input type="submit" value="Create New Post!" class="btn" id="login-btn" type="button"></input>
+          </div>
+          <!-- <div class="col-12 mx-3 mb-3">
+            <a href="/createacct" id="sign-up-instead">Sign Up Instead</a>
+    
+          </div> -->
+        </form>
+      </div>
     </div>
-    <div class="col-6" id="blog-post-card-post">
-      <p></p>
-    </div>
-    <form class="col-12 blog-post-form" id="sign-up-card">
-      <div class="pb-3" style="padding-left: 0; padding-right: 0">
-        <label for="newblog-title" class="form-label text-white mt-3 mx-3">Title</label>
-        <input type="text" class="form-control mx-3" style="width:97%" id="titleInput"
-          placeholder="Tech blog is cool!">
-      </div>
-      <label for="blogcontent" class="form-label text-white mx-3">Content</label>
-      <textarea id="blogcontent" class="form-control mx-3" style="width:20rem"
-        aria-describedby="passwordHelpBlock">
-      <div id="passwordHelpBlock" class="form-text text-white mx-3 mb-4">
-
-      </div>
-      <div class="d-flex justify-content-center">
-        <input type="submit" value="Login" class="btn" id="login-btn" type="button"></input>
-        {{!-- <button class="btn" id="create-acct-btn" type="button">Login</button> --}}
-      </div>
-      <div class="col-12 mx-3 mb-3">
-        <a href="/createacct" id="sign-up-instead">Sign Up Instead</a>
-
-      </div>
-    </form>
-  </div>
-</div>
 
 <script src="/js/newpost.js"></script>
