--- a/views/partials/dashboardRender.handlebars
+++ b/views/partials/dashboardRender.handlebars
@@ -1,5 +1,5 @@
-<div class="container">
-    <div class="row">
+{{!-- <div class="container">
+    <div class="row"> --}}
         <!-- this is where you enter your existing blog posts -->
         <div class="col-6" id="blog-post-card">
             <p>{{title}}</p>
@@ -23,8 +23,8 @@
         </div>
 
         <!-- button area -->
-        <div class="d-grid col-2 mx-auto">
+        {{!-- <div class="d-grid col-2 mx-auto">
             <button class="btn" id="new-post-btn" type="button">+ New Post</button>
         </div>
     </div>
-</div>
+</div> --}}
