--- a/views/partials/blogpostsrender.handlebars
+++ b/views/partials/blogpostsrender.handlebars
@@ -3,7 +3,7 @@
 <div class="container">
     <div class="row">
         <div class="col-6" id="blog-post-card">
-            <p>{{title}}</p>
+            <p id="{{id}}">{{title}}</p>
         </div>
         <div class="col-6" id="blog-post-card-post">
             <p>posted by {{user}} on {{date}}</p>
@@ -13,3 +13,4 @@
         </div>
     </div>
 </div>
+
