--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,16 +3,4 @@
 {{/each}}
 
 
-{{!-- <div class="container">
-    <div class="row">
-        <div class="col-6" id="blog-post-card">
-            <p>{{title}}</p>
-        </div>
-        <div class="col-6" id="blog-post-card-post">
-            <p>posted by {{User.username}} on {{date}}</p>
-        </div>
-        <div class="col-12" id="blog-post-content">
-            {{content}}
-        </div>
-    </div>
-</div> --}}
+<script src="/js/addcomment.js"></script>
