Made all of the crucial functions to be operational

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,21 @@
 {{#each blogPosts as |blogpost|}}
-{{> blogpostsrender}}
+{{!-- {{> blogpostsrender}} --}}
+<div class="container">
+    <div class="row">
+        <div class="col-6" id="blog-post-card">
+            <a href="/api/blogpost/{{blogpost.id}}"><p>{{blogpost.title}}</p></a>
+        </div>
+        <div class="col-6" id="blog-post-card-post">
+            <p>posted by {{userName.username}} on {{blogpost.date}}</p>
+        </div>
+        <div class="col-12" id="blog-post-content">
+            {{blogpost.content}}
+        </div>
+    </div>
+</div>
+
+
 {{/each}}
 
 
-<script src="/js/addcomment.js"></script>
+{{!-- <script src="/js/addcomment.js"></script> --}}
