--- a/public/css/style.css
+++ b/public/css/style.css
@@ -68,6 +68,16 @@ header {
     background-color: #5443b3;
 }
 
+#blog-post-card a {
+    text-decoration: none;
+    color: white
+}
+
+#blog-post-card:hover {
+    cursor:pointer;
+    background: linear-gradient(to left, #5443b3, #392896)
+}
+
 #blog-post-card p {
     margin-top: 0;
     margin-bottom: 0;
@@ -129,7 +139,7 @@ header {
     border-top: none
 }
 
-#create-acct-btn, #login-btn, #submit-btn {
+#create-acct-btn, #login-btn, #submit-btn, #update-btn {
     background-color: #5443b3;
     color: white;
     margin-bottom: 1rem;
@@ -149,4 +159,14 @@ header {
 #sign-up-instead {
     color: white;
     font-size: 1.2rem;
+}
+
+#edit-post-btn, #delete-post-btn {
+    margin-top: 1rem;
+    background-color: #5443b3;
+    color: white;
+    width: 20%;
+    font-size: 1.4rem;
+    margin-right: 1rem;
+    margin-left: 1rem;
 }
