--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -20,6 +20,7 @@
           </div>
           <div class="d-flex justify-content-center">
             <input type="submit" value="Create New Post!" class="btn" id="login-btn" type="button"></input>
+            <input type="hidden" value="{{user.id}}" id="userid"></input>
           </div>
           <!-- <div class="col-12 mx-3 mb-3">
             <a href="/createacct" id="sign-up-instead">Sign Up Instead</a>
